2012-11-19  David S. Miller  <davem@davemloft.net>

	With help from Joseph Myers.
	* sysdeps/ieee754/ldbl-128/s_atanl.c (__atanl): Handle tiny and
	very large arguments properly.
	* math/libm-test.inc (atan_test): New tests.
	(atan2_test): New tests.
	* sysdeps/sparc/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Update.

2012-11-19  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14856]
	* posix/bits/posix1_lim.h [!__USE_XOPEN2K] (_POSIX_TZNAME_MAX):
	Define to 3.

	* conform/data/errno.h-data [POSIX] (EADDRINUSE): Do not expect.
	[POSIX] (EADDRNOTAVAIL): Likewise.
	[POSIX] (EAFNOSUPPORT): Likewise.
	[POSIX] (EALREADY): Likewise.
	[POSIX] (ECONNABORTED): Likewise.
	[POSIX] (ECONNREFUSED): Likewise.
	[POSIX] (ECONNRESET): Likewise.
	[POSIX] (EDESTADDRREQ): Likewise.
	[POSIX] (EDQUOT): Likewise.
	[POSIX] (EHOSTUNREACH): Likewise.
	[POSIX] (EIDRM): Likewise.
	[POSIX] (EISCONN): Likewise.
	[POSIX] (ELOOP): Likewise.
	[POSIX] (EMULTIHOP): Likewise.
	[POSIX] (ENETDOWN): Likewise.
	[POSIX] (ENETUNREACH): Likewise.
	[POSIX] (ENOBUFS): Likewise.
	[POSIX] (ENODATA): Likewise.
	[POSIX] (ENOLINK): Likewise.
	[POSIX] (ENOMSG): Likewise.
	[POSIX] (ENOPROTOOPT): Likewise.
	[POSIX] (ENOSR): Likewise.
	[POSIX] (ENOSTR): Likewise.
	[POSIX] (ENOTCONN): Likewise.
	[POSIX] (ENOTSOCK): Likewise.
	[POSIX] (EOPNOTSUPP): Likewise.
	[POSIX] (EOVERFLOW): Likewise.
	[POSIX] (EPROTO): Likewise.
	[POSIX] (EPROTONOSUPPORT): Likewise.
	[POSIX] (EPROTOTYPE): Likewise.
	[POSIX] (ESTALE): Likewise.
	[POSIX] (ETIME): Likewise.
	[POSIX] (ETXTBSY): Likewise.
	[POSIX] (EWOULDBLOCK): Likewise.
	[!ISO && !ISO99 && !ISO11] (E*): Do not allow.
	* conform/data/fcntl.h-data [POSIX] (SEEK_SET): Allow.
	[POSIX] (SEEK_CUR): Likewise.
	[POSIX] (SEEK_END): Likewise.
	[POSIX || UNIX98] (mode_t): Do not require.
	[POSIX] (off_t): Likewise.
	[POSIX] (pid_t): Likewise.
	[POSIX] (sys/stat.h): Do not allow header.
	[POSIX] (unistd.h): Likewise.
	[!ISO && !ISO99 && !ISO11] (timespec): Do not allow.